# wsfeeder

./: LICENSE  README.md  pyproject.toml
wsfeeder/: __init__.py  errors.py  parsing.py  processing.py
